--- a/BigSwordRPG-C#/BigSwordRPG-C#.csproj
+++ b/BigSwordRPG-C#/BigSwordRPG-C#.csproj
@@ -2,10 +2,14 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>BigSwordRPG_C_</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Program\" />
+  </ItemGroup>
 
 </Project>
