--- a/BigSwordRPG-C#/BigSwordRPG-C#.csproj
+++ b/BigSwordRPG-C#/BigSwordRPG-C#.csproj
@@ -8,4 +8,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="8.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Asset\Image\" />
+  </ItemGroup>
+
 </Project>
