--- a/BigSwordRPG-C#/BigSwordRPG-C#.csproj
+++ b/BigSwordRPG-C#/BigSwordRPG-C#.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <Folder Include="Game\Stat\" />
+    <Folder Include="Config\" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.3" />
   </ItemGroup>
 
