--- a/BigSwordRPG-C#/BigSwordRPG-C#.csproj
+++ b/BigSwordRPG-C#/BigSwordRPG-C#.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <Folder Include="Game\Stat\" />
     <Folder Include="Config\" />
+    <PackageReference Include="NAudio" Version="2.2.1" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.3" />
   </ItemGroup>
 
