Updated architecture and added DrawText to the Renderer

--- a/BigSwordRPG-C#/BigSwordRPG-C#.csproj
+++ b/BigSwordRPG-C#/BigSwordRPG-C#.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>BigSwordRPG_C_</RootNamespace>
+    <RootNamespace>BigSwordRPG</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
